platform/deploy/infra/promtail/gateway/promtail-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: promtail-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 4318
        name: promtail-https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: promtail-gateway-tls
      hosts:
        - "promtail.threadforge.local"
